--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
       content="Web site created using create-react-app"
     />
     <title>Good Website</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
     <div id="root"></div>
